deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microsvc
  labels:
    app: microsvc
spec:
  replicas: 1
  revisionHistoryLimit: 10
  minReadySeconds: 5
  selector:
    matchLabels:
      app: microsvc
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 2
  template:
    metadata:
      labels:
        app: microsvc
        tier: service
    spec:
      containers:
        - name: microsvc
          image: [docker image of the service]
          imagePullPolicy: Always
          resources:
            requests:
              memory: "64Mi"
              cpu: "125m"
            limits:
              memory: "128Mi"
              cpu: "250m"
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            timeoutSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: microsvc
  labels:
    app: microsvc
    tier: service
spec:
  type: NodePort
  ports:
    - port: 8080
  selector:
    app: microsvc
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: microsvc
  labels:
    app: microsvc
    tier: backend
spec:
  backend:
    serviceName: microsvc
    servicePort: 8080
